cmake_minimum_required(VERSION 3.13)
project(CLionProjects)

set(CMAKE_CXX_STANDARD 11)

#add_executable(tmp _tmp.cpp)
add_executable(main _main.cpp _main.cpp)
#add_executable(A A.cpp)
#add_executable(A A.cpp)
#add_executable(A A.cpp)
#add_executable(A A.cpp)
#add_executable(A A.cpp)
#add_executable(A A.cpp)
#add_executable(A A.cpp)
#add_executable(A A.cpp)
#add_executable(A A.cpp)
#add_executable(A A.cpp)

